// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadable should component LazyComponent after waiting for it to load 1`] = `
<div>
  My lazy-loaded component
</div>
`;

exports[`loadable should component fallback if given one 1`] = `
<div>
  Loading
</div>
`;

exports[`loadable should component null by default 1`] = `null`;

exports[`loadable should component null by default with empty options 1`] = `null`;
